[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/img/icons/fishy.png" type="Texture" id=1]
[ext_resource path="res://scenes/minigames/WhackAMole/Hole.gd" type="Script" id=2]
[ext_resource path="res://assets/img/icons/chest.png" type="Texture" id=3]
[ext_resource path="res://assets/themes/text_theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/themes/PanelStyle.tres" type="StyleBox" id=5]

[node name="Hole" type="Node2D"]
script = ExtResource( 2 )

[node name="HoleSprite" type="Sprite" parent="."]
z_index = 1
z_as_relative = false
texture = ExtResource( 3 )

[node name="Mole" type="Node2D" parent="HoleSprite"]

[node name="MoleSprite" type="Sprite" parent="HoleSprite/Mole"]
position = Vector2( 0, -2 )
scale = Vector2( 0.8, 0.8 )
z_as_relative = false
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="HoleSprite/Mole/MoleSprite"]
show_behind_parent = true
margin_left = -20.0
margin_top = 11.25
margin_right = 20.0
margin_bottom = 25.25
theme = ExtResource( 4 )
text = "A"
align = 1

[node name="Panel" type="Panel" parent="HoleSprite/Mole/MoleSprite/Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3.0
margin_right = -1.0
margin_bottom = 2.0
custom_styles/panel = ExtResource( 5 )

[node name="UpNode" type="Node2D" parent="HoleSprite"]
position = Vector2( 0, -40 )

[node name="DownNode" type="Node2D" parent="HoleSprite"]
